# MusicalKey

./: CHANGELOG.md  README.md  musical-key.cabal  stack.yaml
src/MusicalKey/: Interval.hs  Pitch.hs  Scale.hs  Tuning.hs  TuningSystem.hs
src/MusicalKey/Tuning/: Examples.hs  Mode.hs  Tuning.hs
src/MusicalKey/TuningSystem/: Examples.hs  MidiTuning.hs  Tuning.hs
