name:                musical-key
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/githubuser/musical-key#readme
license:             BSD3
license-file:        LICENSE
author:              Author name here
maintainer:          example@example.com
copyright:           2023 Author name here
category:            Web
build-type:          Simple
extra-source-files:  README.md
                     CHANGELOG.md
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     MusicalKey.Interval,
                       MusicalKey.TuningSystem,
                       MusicalKey.TuningSystem.Examples,
                       MusicalKey.TuningSystem.Tuning,
                       MusicalKey.TuningSystem.MidiTuning
  build-depends:       base >= 4.7 && < 5,
                       containers >=0.6 && <0.7,
                       groups >=0.5.0 && <0.6.0
  default-language:    GHC2021
  ghc-options:         -Wall
                       -Wcompat
                       -Widentities
                       -Wincomplete-record-updates
                       -Wincomplete-uni-patterns
                       -Wmissing-export-lists
                       -Wmissing-home-modules
                       -Wpartial-fields
                       -Wredundant-constraints

source-repository head
  type:     git
  location: https://github.com/githubuser/musical-key
